update prepare and test methods

--- a/config/config.html
+++ b/config/config.html
@@ -4,6 +4,7 @@
   "gradle install".
 </p>
 <select ng-model="config.test">
+  <!-- <option value="maven clean install">mvn clean install</option> -->
   <option value="gradle build">gradle build</option>
   <option value="none">No test command</option>
 </select>
